# Electronic_Chess_Box

./: .gitignore  README.md
chess_engine/: .clang-tidy
chess_engine/src/: cli_main.cpp  gui_main.cpp
chess_engine/src/board/: castling.hpp  check.hpp  draw_rules.hpp  initialization.cpp  initialization.hpp  move_generation.cpp
chess_engine/src/engine/: computer_player.hpp  engine_logger.hpp  move_generator.cpp  opening_book.hpp  (+1 more)
code/arduino/: arduino.ino  bluetooth.h  config.h  led_control.h  reed_matrix.h  shift_registers.h
code/chess_engine/: .clang-format  CMakeLists.txt
code/chess_engine/src/: gui_main.cpp  lichess_bot.cpp
code/chess_engine/src/board/: board.cpp  board.hpp  castling.cpp  check.cpp  draw_rules.cpp  move_generation.hpp
code/chess_engine/src/engine/: computer_player.cpp  move_generator.hpp  opening_book.cpp  position_evaluator.cpp  position_evaluator.hpp
code/chess_engine/src/gui/: sdl_game.cpp  sdl_game.hpp
code/chess_engine/src/pieces/: piece_color.hpp  piece_symbols.hpp  piece_types.hpp
code/communication/: arduino_bridge.py  lichess.py  main.py  settings.json  tests.py
communication/: constants.py  lichess.py  main.py
communication/themes/: theme.py
communication/widgets/: color_label.py
communication/windows/: settings.py
models/board/: assembly.SLDASM  bottom.SLDPRT  front.SLDPRT  laser.cdr  left.SLDPRT  right.SLDPRT  separator.SLDPRT  separator2.SLDPRT  separator3.SLDPRT  top_left.SLDPRT  top_right.SLDPRT
models/pieces/: bishop.stl  king-body.stl  king-cross.stl  knight.stl  pawn.stl  queen.stl  rook.stl
(+6 files in other folders)
